Added comments and law of demeter

--- a/app/views/places/_place.html.haml
+++ b/app/views/places/_place.html.haml
@@ -4,10 +4,10 @@
   .list-group-item-text
     .country
       Country:
-      = place.country.name
+      = place.country_name
       .city
         City:
-        = place.city.name
+        = place.city_name
       .duration
         Duration:
         = place.begins_at
