--- a/app/views/places/_place.html.haml
+++ b/app/views/places/_place.html.haml
@@ -10,6 +10,8 @@
         = place.city_name
       .duration
         Duration:
-        = place.begins_at
+        %span.begins
+          = place.begins_at
         \-
-        = place.ends_at
+        %span.ends
+          = place.ends_at
